test/error/syntax/err1.rzy


component
  Err1
    slot   inp();
    signal out();
    
  implementation elementary
    
    slot inp()
      out.foo();      // .foo does not exist
    end
    
  end

